# gnn-graph-theory

./: .gitignore  GIN_full_aut.py  GIN_test.ipynb  LICENSE  README.md  analysis.ipynb  dataset_gen.py  evaluate.ipynb  gin_train.py  main.py  model.py  models.py  pyproject.toml  utils.py
cs224w/: CS224W_Colab_0.ipynb  CS224W_Colab_1.ipynb  CS224W_Colab_2.ipynb  CS224W_Colab_3.ipynb
css224w/: CS224W_Colab_0.ipynb
dataset/: 2000_raw_graphs.g6  __init__.py  all_graphs.g6  build.py  data_utils.py  dataset_gen.py  dataset_stats.ipynb  features.py  generate.py  graph_utils.py  partial_automorphism_sizes.csv  partial_automorphism_stats.csv  paut_sizes.csv  pseudosimilar_hog.g6  sampling.py  splits.json  stats.ipynb  test_dataset.pt  test_utils.py  testset_gen.py  utils.py
dataset/7_features/: paut_sizes_7_features.csv
dataset/baseline/: paut_sizes_baseline.csv
dataset/g6_files/: 10_nodes.g6  11_nodes.g6  12_nodes.g6  13_nodes.g6  14_nodes.g6  15_nodes.g6  16_nodes.g6  17_nodes.g6  18_nodes.g6  19_nodes.g6  20_nodes.g6  21_nodes.g6  22_nodes.g6  8_nodes.g6  9_nodes.g6
kaggle/: optuna_search.ipynb  train.ipynb
kaggle/7_features/: optuna.ipynb  train.ipynb
kaggle/baseline/: optuna.ipynb  train_71k.ipynb  train_larger_dataset.ipynb  train_smaller_dataset.ipynb
kaggle/gps/: optuna.ipynb  train.ipynb
results/: best_config.json  optuna_trials_summary.csv  training_history.csv
results/7_features/: best_config.json  best_config_7_features.json  best_model_history.csv  (+2 more)
tests/: test_build_module.py  test_features_module.py  test_generate_module.py
(+17 files in other folders)
